                 Duplicate Spectrum was not correctly retrieving the parameters
                 of the spectrum being duplicated.
  May 18, 2007 -  Fix CNSCLJumboBuffer::size32() member, was not correctly 
                  picking up the buffer revision level.
  May 28, 2007 - Fix conversion errors in channel -> screens whas moving
                 the dispay of summing errors around.
  May 30, 2007 - Fix up gate locations to match the 3.2 branch.
  June 6, 2007 - Ensure that Xamine superposition prompt messages will display
                 by making them children of the parent of the dialog rather
                 than children of the dialog (which gets hidden when
                 Xamine_error_msg is called).
  June 11,2007   Get a clean development build on ubuntu edgy eft (e.g. from cvs co).
  July 2, 2007   Fix error in 2d integration was returning stdevs not
                 FWHMs.
  July 12,2007 - Fix jumbo buffer handling in scriptable.
  Aug. 16,2007 - BZ 318, The Old GUI spectrum listing was showing the
                wrong gate applications unless the filter string was *
                because the applied gate used was determined using the wrong
                index into the application list.
  Sep 10, 2007 - BZ 318 again.. use hashtables for the gates since indices are
                 fragile wrt  the insertion of new spectra.
  Sep 11, 2007 - Use spectrum definition in swrite to get the acutal axis
                 limits rather than using the conversions in a hokey way.
                 But remember the summary spectrum's special case.
3.1-005 released

Oct 11, 2007 3.1-006 development begins.
  October   15, 2007 - BZ324 - Fixed a bunch of issues with the test data source.
  November  26, 2007 - BZ327 - Multicolored monster has problems when parameter definitions
                               are changed and when such changes are asked to modify spectrum
                               definitions.